fix new color contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -9,7 +9,7 @@ body {
     font-family: "Cabin", sans-serif;
     font-weight: 400;
     background-color: var(--primary-color);
-    color: var(--secondary-color);
+    color: var(--primary-color);
 }
 
 h1 {
@@ -131,7 +131,6 @@ figcaption {
     justify-content: center;
     padding: 20px;
     position: relative;
-    font-weight: 570;
 }
 
 #about-me-content img,
@@ -144,7 +143,6 @@ figcaption {
 #about-me-content p,
 #my-country p {
     max-width: 600px;
-    font-weight: 570;
 }
 
 footer {
